--- a/projects/vs2019/PortalsSokol.vcxproj
+++ b/projects/vs2019/PortalsSokol.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\source\application.c" />
+    <ClCompile Include="..\..\source\application.cpp" />
     <ClCompile Include="..\..\source\external\sokol.c" />
     <ClCompile Include="..\..\source\game.cpp" />
     <ClCompile Include="..\..\source\Main.cpp">
@@ -83,6 +83,7 @@
       <ConformanceMode>true</ConformanceMode>
       <WarningLevel>Level3</WarningLevel>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -98,6 +99,7 @@
       <ConformanceMode>true</ConformanceMode>
       <WarningLevel>Level3</WarningLevel>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
