--- a/projects/vs2019/PortalsSokol.vcxproj.filters
+++ b/projects/vs2019/PortalsSokol.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\source\application.c" />
     <ClCompile Include="..\..\source\game.cpp" />
     <ClCompile Include="..\..\source\external\sokol.c">
       <Filter>external</Filter>
@@ -9,6 +8,7 @@
     <ClCompile Include="..\..\source\Main.cpp" />
     <ClCompile Include="..\..\source\ParticleSystem.cpp" />
     <ClCompile Include="..\..\source\Portals.cpp" />
+    <ClCompile Include="..\..\source\application.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\source\game.h" />
