--- a/projects/vs2019/PortalsSokol.vcxproj.filters
+++ b/projects/vs2019/PortalsSokol.vcxproj.filters
@@ -9,6 +9,7 @@
     <ClCompile Include="..\..\source\Portals.cpp" />
     <ClCompile Include="..\..\source\application.cpp" />
     <ClCompile Include="..\..\source\Vector.cpp" />
+    <ClCompile Include="..\..\source\BaseApp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\source\external\sokol_app.h">
@@ -26,6 +27,7 @@
     <ClInclude Include="..\..\source\Portals.h" />
     <ClInclude Include="..\..\source\ParticleSystem.h" />
     <ClInclude Include="..\..\source\Vector.h" />
+    <ClInclude Include="..\..\source\BaseApp.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="external">
